--- a/APMLibrary.Web/wwwroot/css/site.css
+++ b/APMLibrary.Web/wwwroot/css/site.css
@@ -19,24 +19,15 @@ header {
     
 }
 
-.custom-btn-white {
-    background-color: #FFF;
-    border-color: #000;
-    border: 1px solid;
-    border-radius: 5px;
-
-    box-shadow: 0px 0px 6px #CCC;
-}
-
 body {
     --main-color: #ffef73;
     --secondary-color: #ffda61;
     --main-text-color: #EA2B1F;
 
+    min-width: 100vw;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-
     background-color: #F6F6F6;
 }
 
@@ -56,4 +47,24 @@ body {
     -webkit-box-shadow: inset 0 0 1px #AAA;
     border-radius: 4px;
     background-color: #444;
+}
+
+.custom-bg-white {
+    background-color: #FFF;
+    border-radius: 10px;
+    color: #000;
+    box-shadow: 0px 0px 8px #CCC;
+}
+
+.breadcrumb-item {
+    font-size: 17px;
+}
+
+.checked-star {
+    color: orange;
+}
+
+.card-img-catalog {
+    height: 160px;
+    object-fit: contain;
 }
