--- a/APMLibrary.Web/Pages/_ViewImports.cshtml
+++ b/APMLibrary.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using APMLibraryClient
-@namespace APMLibraryClient.Pages
+﻿@using APMLibrary.Web
+@namespace APMLibrary.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
